26.11
Added aura to siege towers, trying to make them a little more accurate.   Decreased range, increased repeat time (they weren't used for shooting projectiles at infantry.)  Increased health
Han Mangonel increased range by 5 and crush dmg by 20 (They are credited with the trebuchet, stronger version of the catapult)
Spartan rams garrison increased to 15 (rams were first siege engines recorded  (in Assyria) soon to be adopted by sparta) Cost 400 wood no metal, crush dmg reduced by 30% build time 25 instead of 30
Spartan "merc javs" start out with regular jav stats p1 but + 1 pierce and hack resistance, train time increased to 15 seconds.
advanced melee dmg bonus increased to 1.15 from 1.10
range added to 1.05 and 2 range
Fort range increased to 75, Dmg 9 piece 1 crush, also hopefully added territory range of 50 where buildings wont lose influence
CC range increased to 65 garrison increases to 25 for town phase
Town phase increase CC capacity by 5 (25 total) Infantry health increases 5% (trying to include more units)
City phase increases CC capacity by 10 (35 total) Infantry health increases 10% (trying to include more units)


26.10
Spartans get 1 spartriate, 1 peroci spear pony, 4 women 1 pericoic jav and want Spartiate JR to start each game
increased amount of exp needed for spariates to promote to Olympic champ 250 from 200
spartiates added 5 sec to train time (20 instead of 15)
Perioci spearman now are spariate hoplites, start at rank 2
can unlock and train perioci skrimishers from house, p1 (30 seconds)
can unlock and train helots from house, p2 (30 seconds)
CC javilineers reduced to 8 seconds from 9 seconds
spartan phalanx arura range of 7, stackable, -2% promotion exp, .25 pierce/hack armor, 2% slower run/walk
Spartan women same wood gather rate as perioci .8, train normal time (8 seconds)
Krypteia is now aviable in Gerousia, 15% dmg Ifantry 20% more train time 
Krypteia_2 available in upped Gerousia 10% dmg Infantry 20% more train time 