@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Entity parent="template_unit_siege">
   <Attack>
+      <Capture>
+      <AttackName>Capture</AttackName>
+      <Capture>10</Capture>
+      <MaxRange>4</MaxRange>
+      <RepeatTime>1000</RepeatTime>
+      <RestrictedClasses datatype="tokens">Field Palisade Wall</RestrictedClasses>
+    </Capture>
     <Ranged>
       <AttackName>Bow</AttackName>
       <Damage>
         <Pierce>10</Pierce>
         <Crush>2.5</Crush>
       </Damage>
-      <MaxRange>35</MaxRange>
+      <MaxRange>25</MaxRange>
       <Origin>
         <X>0</X>
         <Y>10</Y>
@@ -48,7 +55,7 @@
     <Height>30.0</Height>
   </Footprint>
   <GarrisonHolder>
-    <Max>20</Max>
+    <Max>30</Max>
     <EjectHealth>0.1</EjectHealth>
     <EjectClassesOnDestroy datatype="tokens">Unit</EjectClassesOnDestroy>
     <List datatype="tokens">Support Infantry</List>
@@ -93,6 +100,7 @@
     <Entity>
       <Damage>
         <Pierce>50</Pierce>
+	<Hack>15</Hack>
       </Damage>
     </Entity>
   </Resistance>
