@@ -1,14 +1,22 @@
 26.11
-Added aura to siege towers, trying to make them a little more accurate.   Decreased range, increased repeat time (they weren't used for shooting projectiles at infantry.)  Increased health
-Han Mangonel increased range by 5 and crush dmg by 20 (They are credited with the trebuchet, stronger version of the catapult)
+Spartans
 Spartan rams garrison increased to 15 (rams were first siege engines recorded  (in Assyria) soon to be adopted by sparta) Cost 400 wood no metal, crush dmg reduced by 30% build time 25 instead of 30
 Spartan "merc javs" start out with regular jav stats p1 but + 1 pierce and hack resistance, train time increased to 15 seconds.
 advanced melee dmg bonus increased to 1.15 from 1.10
 range added to 1.05 and 2 range
+Sparta common javs can no longer promote to merc jav.  Also when training from house cost 50 food instead of 40.  "fertility" for common jav increased 100 food and wood (400/400)
+
+All civs
 Fort range increased to 75, Dmg 9 piece 1 crush, also hopefully added territory range of 50 where buildings wont lose influence
 CC range increased to 65 garrison increases to 25 for town phase
 Town phase increase CC capacity by 5 (25 total) Infantry health increases 5% (trying to include more units)
 City phase increases CC capacity by 10 (35 total) Infantry health increases 10% (trying to include more units)
+Added aura to siege towers, trying to make them a little more accurate.   Decreased range, increased repeat time (they weren't used for shooting projectiles at infantry.)  Increased health, gave them "capture attack" to see if that helps
+
+Han
+Han Mangonel increased range by 5 and crush dmg by 20 (They are credited with the trebuchet, stronger version of the catapult)
+
+
 
 
 26.10
